<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.noamm_000.talkwithcompviawifi.MainActivity"
    android:id="@+id/main_rl">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="ltr">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tv_ip"
                android:id="@+id/textView2"
                android:paddingEnd="10dp"
                android:paddingStart="0dp" />

            <EditText
                android:layout_width="234dp"
                android:layout_height="wrap_content"
                android:id="@+id/et_ip"
                android:text="@string/etIp"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tv_port"
                android:id="@+id/textView"
                android:paddingEnd="62dp"
                android:paddingStart="0dp"/>

            <EditText
                android:layout_width="231dp"
                android:layout_height="wrap_content"
                android:id="@+id/et_port"
                android:text="@string/etPort"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="40dp"
                android:id="@+id/rg_axis">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_both"
                    android:id="@+id/rb_both"
                    android:checked="true" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_screen"
                    android:id="@+id/rb_tp" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnConnect"
                android:id="@+id/btn_connect"
                android:layout_gravity="center_horizontal"
                android:onClick="socketOperationRequest"
                android:layout_weight="1" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_close_socket"
                android:id="@+id/btn_closeSocket"
                android:layout_gravity="center_horizontal"
                android:onClick="socketOperationRequest"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
